compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__module_access_submodule.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "\n          import hero/submodule\n          pub fn main() {\n            let name = \"Tony Stark\"\n            case name {\n              n if n == submodule.ironman.name -> True\n              _ -> False\n            }\n          }\n        "
---
let
  submodule' = builtins.import ./../../package/hero/submodule.nix;
  
  main =
    { }:
    let
      name = "Tony Stark";
    in
    if name == submodule'.ironman.name then let n = name; in true
    else false;
in
{ inherit main; }
