compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__module_nested_access.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "\n          import hero\n          pub fn main() {\n            let name = \"Bruce Wayne\"\n            case name {\n              n if n == hero.batman.secret_identity.name -> True\n              _ -> False\n            }\n          }\n        "
---
let
  hero' = builtins.import ./../../package/hero.nix;
  
  main =
    {}:
      let
        name = "Bruce Wayne";
      in
      if name == hero'.batman.secret_identity.name then let n = name; in true
      else false;
in { inherit main; }
