compiler-core/src/nix/tests/snapshots/glistix_core__nix__tests__case_clause_guards__nested_record_access.snap
---
source: compiler-core/src/nix/tests/case_clause_guards.rs
expression: "\npub type A {\n  A(b: B)\n}\n\npub type B {\n  B(c: C)\n}\n\npub type C {\n  C(d: Bool)\n}\n\npub fn a(a: A) {\n  case a {\n    _ if a.b.c.d -> 1\n    _ -> 0\n  }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub type A {
  A(b: B)
}

pub type B {
  B(c: C)
}

pub type C {
  C(d: Bool)
}

pub fn a(a: A) {
  case a {
    _ if a.b.c.d -> 1
    _ -> 0
  }
}


----- COMPILED NIX
let
  A = b: { __gleamTag = "A"; inherit b; };
  
  B = c: { __gleamTag = "B"; inherit c; };
  
  C = d: { __gleamTag = "C"; inherit d; };
  
  a = a: if a.b.c.d then 1 else 0;
in
{ inherit A B C a; }
